# lmscan

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  demo.cast  demo.tape  pyproject.toml
.github/workflows/: ci.yml
Formula/: lmscan.rb
paper/: lmscan_paper.tex
src/lmscan/: __init__.py  __main__.py  _types.py  benchmark.py  calibration.py  classifier.py  cli.py  detector.py  evaluation.py  features.py  fingerprint.py  languages.py  perplexity.py  report.py  scanner.py  web.py
tests/: test_batch.py  test_benchmark.py  test_calibration.py  test_classifier.py  test_cli.py  test_detector.py  test_edge_cases.py  test_evaluation.py  test_features.py  test_fingerprint.py  test_fingerprint_models.py  test_html_report.py  test_languages.py  test_paragraphs.py  test_perplexity.py  test_report.py  test_scanner.py  test_web.py
vscode-extension/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts
