[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lmscan"
version = "0.4.0"
description = "Detect AI-generated text and fingerprint which LLM wrote it. Open-source GPTZero alternative. Zero dependencies, works offline."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [{ name = "Zacharie B" }]
keywords = [
    "ai-detection",
    "ai-text-detection",
    "gptzero",
    "llm",
    "chatgpt",
    "claude",
    "gemini",
    "text-forensics",
    "plagiarism",
    "content-detection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
web = ["streamlit>=1.30.0"]
all = ["lmscan[web]"]

[project.scripts]
lmscan = "lmscan.cli:main"

[project.urls]
Homepage = "https://github.com/stef41/lmscan"
Repository = "https://github.com/stef41/lmscan"
Issues = "https://github.com/stef41/lmscan/issues"
Changelog = "https://github.com/stef41/lmscan/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/lmscan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
